samples/_failures_safe/1761650373_b52bf5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a311bb0.c: In function ‘cycleCheckUtil’:
./samples/SAFE/__tmp_7a311bb0.c:178:9: error: expected ‘,’ or ‘;’ at end of input
  178 |         int **matrix = (int **)graph
      |         ^~~
./samples/SAFE/__tmp_7a311bb0.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a311bb0.c:178:9: error: expected declaration or statement at end of input
